--- a/frame/random-beacon/Cargo.toml
+++ b/frame/random-beacon/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-authors = ['Anonymous']
+authors = ['Cardinal Cryptography devs']
 edition = '2018'
-name = 'pallet-template'
+name = 'pallet-random-beacon'
 version = "2.0.0-rc6"
 license = "Unlicense"
 homepage = "https://substrate.dev"
 repository = "https://github.com/paritytech/substrate/"
-description = "FRAME pallet template for defining custom runtime logic."
+description = "FRAME pallet for generating an unpredictable, unbiased, and verifiable randomness."
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
@@ -17,28 +17,27 @@ codec = { package = "parity-scale-codec", version = "1.3.4", default-features = 
 [dependencies.frame-support]
 default-features = false
 version = "2.0.0-rc6"
-path = "../../../../frame/support"
+path = "../../frame/support"
 
 [dependencies.frame-system]
 default-features = false
 version = "2.0.0-rc6"
-path = "../../../../frame/system"
+path = "../../frame/system"
 
 [dev-dependencies.sp-core]
 default-features = false
 version = "2.0.0-rc6"
-path = "../../../../primitives/core"
+path = "../../primitives/core"
 
 [dev-dependencies.sp-io]
 default-features = false
 version = "2.0.0-rc6"
-path = "../../../../primitives/io"
+path = "../../primitives/io"
 
 [dev-dependencies.sp-runtime]
 default-features = false
 version = "2.0.0-rc6"
-path = "../../../../primitives/runtime"
-
+path = "../../primitives/runtime"
 
 [features]
 default = ['std']
