--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,8 @@
 [workspace]
 members = [
-    "bin/rb-node/node",
-    "bin/rb-node/runtime",
-	"bin/node-template/node",
-	"bin/node-template/runtime",
-	"bin/node-template/pallets/template",
+    "bin/ab-node/node",
+    "bin/ab-node/runtime",
+    "client/ab-gossip",
 	"bin/node/bench",
 	"bin/node/browser-testing",
 	"bin/node/cli",
