--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ members = [
 	"client/telemetry",
 	"client/transaction-pool",
 	"client/transaction-pool/graph",
+	"client/dummy-gossip",
 	"utils/prometheus",
 	"utils/wasm-builder-runner",
 	"frame/assets",
