--- a/client/dummy-gossip/Cargo.toml
+++ b/client/dummy-gossip/Cargo.toml
@@ -16,6 +16,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 futures = "0.3.4"
 futures-timer = "3.0.1"
+parking_lot = "0.10.0"
 libp2p = { version = "0.24.0", default-features = false }
 log = "0.4.8"
 lru = "0.4.3"
