--- a/client/ab-gossip/Cargo.toml
+++ b/client/ab-gossip/Cargo.toml
@@ -23,6 +23,7 @@ parking_lot = "0.10.0"
 rand = "0.7.2"
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 sp-arithmetic = { version = "2.0.0-rc6", path = "../../primitives/arithmetic" }
+sp-block-builder = { version = "2.0.0-rc6", path = "../../primitives/block-builder" }
 sp-utils = { version = "2.0.0-rc6", path = "../../primitives/utils" }
 sp-consensus = { version = "0.8.0-rc6", path = "../../primitives/consensus/common" }
 sc-consensus = { version = "0.8.0-rc6", path = "../../client/consensus/common" }
