--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ members = [
 	"client/offchain",
 	"client/peerset",
 	"client/proposer-metrics",
+    "client/randomness-beacon",
 	"client/rpc-servers",
 	"client/rpc",
 	"client/rpc-api",
