rb-node for testing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ members = [
 	"bin/node/rpc",
 	"bin/node/runtime",
 	"bin/node/testing",
+	"bin/rb-node/node",
+	"bin/rb-node/runtime",
 	"bin/utils/subkey",
 	"bin/utils/chain-spec-builder",
 	"client/api",
