--- a/bin/rb-node/node/Cargo.toml
+++ b/bin/rb-node/node/Cargo.toml
@@ -17,7 +17,13 @@ name = "rb-node"
 
 [dependencies]
 structopt = "0.3.8"
+log = "0.4.8"
+parking_lot = "0.10.0"
+futures-sink  = "0.3.4"
+futures = "0.3.4"
+async-std = "1.6.3"
 
+randomness-beacon = {version = "0.1.0", path = "../../../client/randomness-beacon"}
 sc-cli = { version = "0.8.0-rc6", path = "../../../client/cli", features = ["wasmtime"] }
 sp-core = { version = "2.0.0-rc6", path = "../../../primitives/core" }
 sc-executor = { version = "0.8.0-rc6", path = "../../../client/executor", features = ["wasmtime"] }
