--- a/frame/randomness-beacon/Cargo.toml
+++ b/frame/randomness-beacon/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-randomness-beacon"
-version = "0.1.0"
+version = "2.0.0-rc6"
 authors = ["Damian Straszak <damian.straszak@gmail.com>, Michal Swietek <michal.swietek@cardinals.cc>"]
 edition = "2018"
 license = "Apache-2.0"
