wait for random bytes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,6 +92,7 @@ members = [
 	"frame/node-authorization",
 	"frame/offences",
 	"frame/proxy",
+    "frame/randomness-beacon",
 	"frame/randomness-collective-flip",
 	"frame/recovery",
 	"frame/scheduler",
@@ -145,6 +146,7 @@ members = [
 	"primitives/npos-elections",
 	"primitives/npos-elections/fuzzer",
 	"primitives/npos-elections/compact",
+    "primitives/randomness-beacon",
 	"primitives/rpc",
 	"primitives/runtime-interface",
 	"primitives/runtime-interface/proc-macro",
