--- a/primitives/randomness-beacon/Cargo.toml
+++ b/primitives/randomness-beacon/Cargo.toml
@@ -17,6 +17,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 sp-inherents = { version = "2.0.0-rc6", path = "../../primitives/inherents" }
 sp-runtime = { version = "2.0.0-rc6", default-features = false, path = "../../primitives/runtime" }
+sp-std = { version = "2.0.0-rc6", default-features = false, path = "../std" }
 parking_lot = "0.10.0"
 log = { version = "0.4.8", optional = true }
 
@@ -26,4 +27,5 @@ std = [
 	"codec/std",
 	"log",
 	"sp-runtime/std",
+	"sp-std/std",
 ]
