--- a/bin/rb-node/node/Cargo.toml
+++ b/bin/rb-node/node/Cargo.toml
@@ -37,6 +37,7 @@ sp-consensus = { version = "0.8.0-rc6", path = "../../../primitives/consensus/co
 sc-consensus = { version = "0.8.0-rc6", path = "../../../client/consensus/common" }
 sc-finality-grandpa = { version = "0.8.0-rc6", path = "../../../client/finality-grandpa" }
 sp-finality-grandpa = { version = "2.0.0-rc6", path = "../../../primitives/finality-grandpa" }
+sp-randomness-beacon= { version = "2.0.0-rc6", path = "../../../primitives/randomness-beacon" }
 sc-client-api = { version = "2.0.0-rc6", path = "../../../client/api" }
 sp-runtime = { version = "2.0.0-rc6", path = "../../../primitives/runtime" }
 
