--- a/bin/rb-node/runtime/Cargo.toml
+++ b/bin/rb-node/runtime/Cargo.toml
@@ -36,6 +36,8 @@ sp-std = { version = "2.0.0-rc6", default-features = false, path = "../../../pri
 sp-transaction-pool = { version = "2.0.0-rc6", default-features = false, path = "../../../primitives/transaction-pool" }
 sp-version = { version = "2.0.0-rc6", default-features = false, path = "../../../primitives/version" }
 
+pallet-randomness-beacon= { version = "2.0.0-rc6", default-features = false, path = "../../../frame/randomness-beacon" }
+
 # Used for the node's RPCs
 frame-system-rpc-runtime-api = { version = "2.0.0-rc6", default-features = false, path = "../../../frame/system/rpc/runtime-api/" }
 pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0-rc6", default-features = false, path = "../../../frame/transaction-payment/rpc/runtime-api/" }
@@ -53,6 +55,7 @@ std = [
 	"pallet-balances/std",
 	"pallet-grandpa/std",
 	"pallet-randomness-collective-flip/std",
+	"pallet-randomness-beacon/std",
 	"pallet-sudo/std",
 	"pallet-timestamp/std",
 	"pallet-transaction-payment/std",
