--- a/frame/randomness-beacon/Cargo.toml
+++ b/frame/randomness-beacon/Cargo.toml
@@ -13,6 +13,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
 sp-inherents = { version = "2.0.0-rc6", default-features = false, path = "../../primitives/inherents" }
+sp-randomness-beacon= { version = "2.0.0-rc6", default-features = false, path = "../../primitives/randomness-beacon" }
 sp-authorship = { version = "2.0.0-rc6", default-features = false, path = "../../primitives/authorship" }
 sp-std = { version = "2.0.0-rc6", default-features = false, path = "../../primitives/std" }
 sp-runtime = { version = "2.0.0-rc6", default-features = false, path = "../../primitives/runtime" }
