--- a/bin/rb-node/node/Cargo.toml
+++ b/bin/rb-node/node/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rb-node"
-version = "2.0.0-rc6"
+version = "2.0.0"
 authors = ["Anonymous"]
 description = "A new FRAME-based Substrate node, ready for hacking."
 edition = "2018"
@@ -24,35 +24,35 @@ futures = "0.3.4"
 async-std = "1.6.3"
 
 randomness-beacon = {version = "0.1.0", path = "../../../client/randomness-beacon"}
-sc-cli = { version = "0.8.0-rc6", path = "../../../client/cli", features = ["wasmtime"] }
-sp-core = { version = "2.0.0-rc6", path = "../../../primitives/core" }
-sc-executor = { version = "0.8.0-rc6", path = "../../../client/executor", features = ["wasmtime"] }
-sc-service = { version = "0.8.0-rc6", path = "../../../client/service", features = ["wasmtime"] }
-sp-inherents = { version = "2.0.0-rc6", path = "../../../primitives/inherents" }
-sc-transaction-pool = { version = "2.0.0-rc6", path = "../../../client/transaction-pool" }
-sp-transaction-pool = { version = "2.0.0-rc6", path = "../../../primitives/transaction-pool" }
-sc-consensus-aura = { version = "0.8.0-rc6", path = "../../../client/consensus/aura" }
-sp-consensus-aura = { version = "0.8.0-rc6", path = "../../../primitives/consensus/aura" }
-sp-consensus = { version = "0.8.0-rc6", path = "../../../primitives/consensus/common" }
-sc-consensus = { version = "0.8.0-rc6", path = "../../../client/consensus/common" }
-sc-finality-grandpa = { version = "0.8.0-rc6", path = "../../../client/finality-grandpa" }
-sp-finality-grandpa = { version = "2.0.0-rc6", path = "../../../primitives/finality-grandpa" }
-sp-randomness-beacon= { version = "2.0.0-rc6", path = "../../../primitives/randomness-beacon" }
-sc-client-api = { version = "2.0.0-rc6", path = "../../../client/api" }
-sp-runtime = { version = "2.0.0-rc6", path = "../../../primitives/runtime" }
+sc-cli = { version = "0.8.0", path = "../../../client/cli", features = ["wasmtime"] }
+sp-core = { version = "2.0.0", path = "../../../primitives/core" }
+sc-executor = { version = "0.8.0", path = "../../../client/executor", features = ["wasmtime"] }
+sc-service = { version = "0.8.0", path = "../../../client/service", features = ["wasmtime"] }
+sp-inherents = { version = "2.0.0", path = "../../../primitives/inherents" }
+sc-transaction-pool = { version = "2.0.0", path = "../../../client/transaction-pool" }
+sp-transaction-pool = { version = "2.0.0", path = "../../../primitives/transaction-pool" }
+sc-consensus-aura = { version = "0.8.0", path = "../../../client/consensus/aura" }
+sp-consensus-aura = { version = "0.8.0", path = "../../../primitives/consensus/aura" }
+sp-consensus = { version = "0.8.0", path = "../../../primitives/consensus/common" }
+sc-consensus = { version = "0.8.0", path = "../../../client/consensus/common" }
+sc-finality-grandpa = { version = "0.8.0", path = "../../../client/finality-grandpa" }
+sp-finality-grandpa = { version = "2.0.0", path = "../../../primitives/finality-grandpa" }
+sp-randomness-beacon= { version = "2.0.0", path = "../../../primitives/randomness-beacon" }
+sc-client-api = { version = "2.0.0", path = "../../../client/api" }
+sp-runtime = { version = "2.0.0", path = "../../../primitives/runtime" }
 
 # These dependencies are used for the node template's RPCs
-jsonrpc-core = "14.0.3"
-sc-rpc = { version = "2.0.0-rc6", path = "../../../client/rpc" }
-sp-api = { version = "2.0.0-rc6", path = "../../../primitives/api" }
-sc-rpc-api = { version = "0.8.0-rc6", path = "../../../client/rpc-api" }
-sp-blockchain = { version = "2.0.0-rc6", path = "../../../primitives/blockchain" }
-sp-block-builder = { version = "2.0.0-rc6", path = "../../../primitives/block-builder" }
-sc-basic-authorship = { version = "0.8.0-rc6", path = "../../../client/basic-authorship" }
-substrate-frame-rpc-system = { version = "2.0.0-rc6", path = "../../../utils/frame/rpc/system" }
-pallet-transaction-payment-rpc = { version = "2.0.0-rc6", path = "../../../frame/transaction-payment/rpc/" }
+jsonrpc-core = "15.0.0"
+sc-rpc = { version = "2.0.0", path = "../../../client/rpc" }
+sp-api = { version = "2.0.0", path = "../../../primitives/api" }
+sc-rpc-api = { version = "0.8.0", path = "../../../client/rpc-api" }
+sp-blockchain = { version = "2.0.0", path = "../../../primitives/blockchain" }
+sp-block-builder = { version = "2.0.0", path = "../../../primitives/block-builder" }
+sc-basic-authorship = { version = "0.8.0", path = "../../../client/basic-authorship" }
+substrate-frame-rpc-system = { version = "2.0.0", path = "../../../utils/frame/rpc/system" }
+pallet-transaction-payment-rpc = { version = "2.0.0", path = "../../../frame/transaction-payment/rpc/" }
 
-rb-node-runtime = { version = "2.0.0-rc6", path = "../runtime" }
+rb-node-runtime = { version = "2.0.0", path = "../runtime" }
 
 [build-dependencies]
-substrate-build-script-utils = { version = "2.0.0-rc6", path = "../../../utils/build-script-utils" }
+substrate-build-script-utils = { version = "2.0.0", path = "../../../utils/build-script-utils" }
