--- a/primitives/randomness-beacon/Cargo.toml
+++ b/primitives/randomness-beacon/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sp-randomness-beacon"
-version = "2.0.0-rc6"
+version = "2.0.0"
 authors = ["Cardinal Cryptography"]
 edition = "2018"
 license = "Apache-2.0"
@@ -15,17 +15,15 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
-sp-inherents = { version = "2.0.0-rc6", path = "../../primitives/inherents" }
-sp-runtime = { version = "2.0.0-rc6", default-features = false, path = "../../primitives/runtime" }
-sp-std = { version = "2.0.0-rc6", default-features = false, path = "../std" }
+sp-inherents = { version = "2.0.0", default-features = false, path = "../inherents" }
+sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
+sp-std = { version = "2.0.0", default-features = false, path = "../std" }
 parking_lot = "0.10.0"
-log = { version = "0.4.8", optional = true }
 
 [features]
 default = [ "std" ]
 std = [
 	"codec/std",
-	"log",
 	"sp-runtime/std",
 	"sp-std/std",
 ]
