--- a/client/randomness-beacon/Cargo.toml
+++ b/client/randomness-beacon/Cargo.toml
@@ -27,6 +27,7 @@ sp-block-builder = { version = "2.0.0", path = "../../primitives/block-builder" 
 sp-utils = { version = "2.0.0", path = "../../primitives/utils" }
 sp-consensus = { version = "0.8.0", path = "../../primitives/consensus/common" }
 sc-consensus = { version = "0.8.0", path = "../../client/consensus/common" }
+sc-basic-authorship = { version = "0.8.0", path = "../../client/basic-authorship" }
 sc-telemetry = { version = "2.0.0", path = "../telemetry" }
 sc-keystore = { version = "2.0.0", path = "../keystore" }
 serde_json = "1.0.41"
@@ -34,9 +35,11 @@ sc-client-api = { version = "2.0.0", path = "../api" }
 sp-inherents = { version = "2.0.0", path = "../../primitives/inherents" }
 sp-blockchain = { version = "2.0.0", path = "../../primitives/blockchain" }
 sp-randomness-beacon= { version = "2.0.0", path = "../../primitives/randomness-beacon" }
+sc-proposer-metrics = { version = "0.8.0", path = "../proposer-metrics" }
 sc-network = { version = "0.8.0", path = "../network" }
 sc-network-gossip = { version = "0.8.0", path = "../network-gossip" }
 sp-finality-tracker = { version = "2.0.0", path = "../../primitives/finality-tracker" }
+sp-transaction-pool= { version = "2.0.0", path = "../../primitives/transaction-pool" }
 prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = "../../utils/prometheus", version = "0.8.0"}
 sc-block-builder = { version = "0.8.0", path = "../block-builder" }
 pin-project = "0.4.6"
