--- a/primitives/randomness-beacon/Cargo.toml
+++ b/primitives/randomness-beacon/Cargo.toml
@@ -12,17 +12,24 @@ description = "Substrate inherents for randomness beacon."
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
-sp-inherents = { version = "2.0.0", default-features = false, path = "../inherents" }
-sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
-sp-std = { version = "2.0.0", default-features = false, path = "../std" }
-parking_lot = "0.10.0"
 log = "0.4.8"
+parking_lot = "0.10.0"
+codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
+sp-std = { version = "2.0.0", default-features = false, path = "../std" }
+sp-core = { version = "2.0.0", default-features = false, path = "../core" }
+sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
+sp-inherents = { version = "2.0.0", default-features = false, path = "../inherents" }
+sp-application-crypto = { version = "2.0.0", default-features = false, path = "../application-crypto" }
+
+[dev-dependencies]
+substrate-test-runtime-client = { version = "2.0.0",  path = "../../test-utils/runtime/client" }
 
 [features]
 default = [ "std" ]
 std = [
 	"codec/std",
+	"sp-core/std",
+	"sp-application-crypto/std",
 	"sp-runtime/std",
 	"sp-std/std",
 ]
