--- a/bin/rb-node/runtime/Cargo.toml
+++ b/bin/rb-node/runtime/Cargo.toml
@@ -30,6 +30,7 @@ sp-consensus-aura = { version = "0.8.0", default-features = false, path = "../..
 sp-core = { version = "2.0.0", default-features = false, path = "../../../primitives/core" }
 sp-inherents = { path = "../../../primitives/inherents", default-features = false, version = "2.0.0"}
 sp-offchain = { version = "2.0.0", default-features = false, path = "../../../primitives/offchain" }
+sp-randomness-beacon = { version = "2.0.0", default-features = false, path = "../../../primitives/randomness-beacon" }
 sp-runtime = { version = "2.0.0", default-features = false, path = "../../../primitives/runtime" }
 sp-session = { version = "2.0.0", default-features = false, path = "../../../primitives/session" }
 sp-std = { version = "2.0.0", default-features = false, path = "../../../primitives/std" }
