--- a/primitives/randomness-beacon/Cargo.toml
+++ b/primitives/randomness-beacon/Cargo.toml
@@ -15,6 +15,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 log = "0.4.8"
 parking_lot = "0.10.0"
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
+sp-api = { version = "2.0.0", default-features = false, path = "../api" }
 sp-std = { version = "2.0.0", default-features = false, path = "../std" }
 sp-core = { version = "2.0.0", default-features = false, path = "../core" }
 sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
@@ -22,7 +23,6 @@ sp-inherents = { version = "2.0.0", default-features = false, path = "../inheren
 sp-application-crypto = { version = "2.0.0", default-features = false, path = "../application-crypto" }
 
 [dev-dependencies]
-substrate-test-runtime-client = { version = "2.0.0",  path = "../../test-utils/runtime/client" }
 
 [features]
 default = [ "std" ]
@@ -31,5 +31,6 @@ std = [
 	"sp-core/std",
 	"sp-application-crypto/std",
 	"sp-runtime/std",
+	"sp-api/std",
 	"sp-std/std",
 ]
