--- a/frame/randomness-beacon/Cargo.toml
+++ b/frame/randomness-beacon/Cargo.toml
@@ -23,6 +23,7 @@ impl-trait-for-tuples = "0.1.3"
 
 [dev-dependencies]
 sp-core = { version = "2.0.0", path = "../../primitives/core" }
+sp-io ={ version = "2.0.0", path = "../../primitives/io" }
 
 
 [features]
