--- a/client/randomness-beacon/Cargo.toml
+++ b/client/randomness-beacon/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
 name = "sc-randomness-beacon"
 version = "0.1.0"
-authors = ["Damian Straszak <damian.straszak@cardinals.cc,Michal Swietek <michal.swietek@cardinals.cc>"]
+authors = ["Damian Straszak <damian.straszak@cardinals.cc, Michal Swietek <michal.swietek@cardinals.cc>"]
+description = "Client side pieces of randomnes beacon."
 edition = "2018"
-
-
-
-
-
+license = "Apache 2.0"
+homepage = "https://substrate.dev"
+repository = "https://github.com/Cardinal-Cryptography/substrate/"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
@@ -34,7 +33,7 @@ serde_json = "1.0.41"
 sc-client-api = { version = "2.0.0", path = "../api" }
 sp-inherents = { version = "2.0.0", path = "../../primitives/inherents" }
 sp-blockchain = { version = "2.0.0", path = "../../primitives/blockchain" }
-sp-randomness-beacon= { version = "2.0.0", path = "../../primitives/randomness-beacon" }
+sp-randomness-beacon= { version = "0.1.0", path = "../../primitives/randomness-beacon" }
 sc-proposer-metrics = { version = "0.8.0", path = "../proposer-metrics" }
 sc-network = { version = "0.8.0", path = "../network" }
 sc-network-gossip = { version = "0.8.0", path = "../network-gossip" }
