--- a/frame/randomness-beacon/Cargo.toml
+++ b/frame/randomness-beacon/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "pallet-randomness-beacon"
-version = "2.0.0"
-authors = ["Damian Straszak <damian.straszak@gmail.com>, Michal Swietek <michal.swietek@cardinals.cc>"]
+version = "0.1.0"
+authors = ["Damian Straszak <damian.straszak@cardinals.cc, Michal Swietek <michal.swietek@cardinals.cc>"]
+description = "Pallet for generating unpredictable and unbiased randomness."
 edition = "2018"
-license = "Apache-2.0"
-
+license = "Apache 2.0"
+homepage = "https://substrate.dev"
+repository = "https://github.com/Cardinal-Cryptography/substrate/"
 
 
 [package.metadata.docs.rs]
@@ -13,7 +15,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 sp-inherents = { version = "2.0.0", default-features = false, path = "../../primitives/inherents" }
-sp-randomness-beacon= { version = "2.0.0", default-features = false, path = "../../primitives/randomness-beacon" }
+sp-randomness-beacon= { version = "0.1.0", default-features = false, path = "../../primitives/randomness-beacon" }
 sp-authorship = { version = "2.0.0", default-features = false, path = "../../primitives/authorship" }
 sp-std = { version = "2.0.0", default-features = false, path = "../../primitives/std" }
 sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
