--- a/primitives/randomness-beacon/Cargo.toml
+++ b/primitives/randomness-beacon/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "sp-randomness-beacon"
-version = "2.0.0"
-authors = ["Cardinal Cryptography"]
+version = "0.1.0"
+authors = ["Damian Straszak <damian.straszak@cardinals.cc, Michal Swietek <michal.swietek@cardinals.cc>"]
+description = "Primitives for randomness beacon."
 edition = "2018"
-license = "Apache-2.0"
+license = "Apache 2.0"
 homepage = "https://substrate.dev"
-repository = "https://github.com/paritytech/substrate/"
-description = "Substrate inherents for randomness beacon."
+repository = "https://github.com/Cardinal-Cryptography/substrate/"
+
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
