--- a/client/randomness-beacon/Cargo.toml
+++ b/client/randomness-beacon/Cargo.toml
@@ -66,6 +66,7 @@ tempfile = "3.1.0"
 sp-api = { version = "2.0.0", path = "../../primitives/api" }
 sc-transaction-pool = { version = "2.0.0", path = "../../client/transaction-pool" }
 substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }
+async-std = "1.6.2"
 
 [features]
 default = ["std"]
