--- a/primitives/randomness-beacon/Cargo.toml
+++ b/primitives/randomness-beacon/Cargo.toml
@@ -14,7 +14,9 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 log = "0.4.8"
+sha3 = "0.8"
 parking_lot = "0.10.0"
+bls12_381 = "0.3.1"
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 sp-api = { version = "2.0.0", default-features = false, path = "../api" }
 sp-std = { version = "2.0.0", default-features = false, path = "../std" }
