--- a/primitives/randomness-beacon/Cargo.toml
+++ b/primitives/randomness-beacon/Cargo.toml
@@ -15,6 +15,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 log = "0.4.8"
 sha3 = "0.8"
+rand = "0.7.3"
 parking_lot = "0.10.0"
 bls12_381 = "0.3.1"
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
