--- a/primitives/randomness-beacon/Cargo.toml
+++ b/primitives/randomness-beacon/Cargo.toml
@@ -18,6 +18,7 @@ sha3 = "0.8"
 rand = "0.7.3"
 parking_lot = "0.10.0"
 bls12_381 = "0.3.1"
+pairing = "0.18"
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 sp-api = { version = "2.0.0", default-features = false, path = "../api" }
 sp-std = { version = "2.0.0", default-features = false, path = "../std" }
