--- a/primitives/randomness-beacon/Cargo.toml
+++ b/primitives/randomness-beacon/Cargo.toml
@@ -14,11 +14,11 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 log = "0.4.8"
-sha3 = "0.8"
-rand = "0.7.3"
 parking_lot = "0.10.0"
 bls12_381 = "0.3.1"
 pairing = "0.18"
+sha3 = { version = "0.8", default-features = false, optional = true }
+rand = { version = "0.7.3", default-features = false, optional = true }
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 sp-api = { version = "2.0.0", default-features = false, path = "../api" }
 sp-std = { version = "2.0.0", default-features = false, path = "../std" }
@@ -33,9 +33,14 @@ sp-application-crypto = { version = "2.0.0", default-features = false, path = ".
 default = [ "std" ]
 std = [
 	"codec/std",
+	"rand/std",
+	"sha3/std",
 	"sp-core/std",
 	"sp-application-crypto/std",
 	"sp-runtime/std",
 	"sp-api/std",
 	"sp-std/std",
+]
+full_crypto = [
+	"sha3",
 ]
