--- a/bin/rb-node/node/Cargo.toml
+++ b/bin/rb-node/node/Cargo.toml
@@ -23,7 +23,8 @@ futures-sink  = "0.3.4"
 futures = "0.3.4"
 async-std = "1.6.3"
 
-sc-randomness-beacon = {version = "0.1.0", path = "../../../client/randomness-beacon"}
+
+sp-dkg = { version = "0.1.0", path = "../../../primitives/dkg" }
 sc-cli = { version = "0.8.0", path = "../../../client/cli", features = ["wasmtime"] }
 sp-core = { version = "2.0.0", path = "../../../primitives/core" }
 sc-executor = { version = "0.8.0", path = "../../../client/executor", features = ["wasmtime"] }
@@ -38,6 +39,7 @@ sc-consensus = { version = "0.8.0", path = "../../../client/consensus/common" }
 sc-finality-grandpa = { version = "0.8.0", path = "../../../client/finality-grandpa" }
 sp-finality-grandpa = { version = "2.0.0", path = "../../../primitives/finality-grandpa" }
 sp-randomness-beacon= { version = "0.1.0", path = "../../../primitives/randomness-beacon" }
+sc-randomness-beacon = {version = "0.1.0", path = "../../../client/randomness-beacon"}
 sc-client-api = { version = "2.0.0", path = "../../../client/api" }
 sp-runtime = { version = "2.0.0", path = "../../../primitives/runtime" }
 
