--- a/bin/rb-node/runtime/Cargo.toml
+++ b/bin/rb-node/runtime/Cargo.toml
@@ -38,7 +38,8 @@ sp-std = { version = "2.0.0", default-features = false, path = "../../../primiti
 sp-transaction-pool = { version = "2.0.0", default-features = false, path = "../../../primitives/transaction-pool" }
 sp-version = { version = "2.0.0", default-features = false, path = "../../../primitives/version" }
 
-pallet-randomness-beacon= { version = "0.1.0", default-features = false, path = "../../../frame/randomness-beacon" }
+pallet-dkg = { version = "0.1.0", default-features = false, path = "../../../frame/dkg" }
+pallet-randomness-beacon = { version = "0.1.0", default-features = false, path = "../../../frame/randomness-beacon" }
 
 # Used for the node's RPCs
 frame-system-rpc-runtime-api = { version = "2.0.0", default-features = false, path = "../../../frame/system/rpc/runtime-api/" }
@@ -57,6 +58,7 @@ std = [
 	"pallet-balances/std",
 	"pallet-grandpa/std",
 	"pallet-randomness-collective-flip/std",
+	"pallet-dkg/std",
 	"pallet-randomness-beacon/std",
 	"pallet-sudo/std",
 	"pallet-timestamp/std",
