--- a/primitives/dkg/Cargo.toml
+++ b/primitives/dkg/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "pallet-dkg"
+name = "sp-dkg"
 version = "0.1.0"
 authors = ["Damian Straszak <damian.straszak@cardinals.cc, Michal Swietek <michal.swietek@cardinals.cc>"]
-description = "Pallet for generating threshold BLS keys."
+description = "Primitives for Distributed Key Generation."
 edition = "2018"
 license = "Apache 2.0"
 homepage = "https://substrate.dev"
@@ -13,26 +13,29 @@ repository = "https://github.com/Cardinal-Cryptography/substrate/"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
-sp-dkg = { version = "0.1.0", default-features = false, path = "../../primitives/dkg" }
-sp-std = { version = "2.0.0", default-features = false, path = "../../primitives/std" }
-sp-core = { version = "2.0.0", default-features = false, path = "../../primitives/core" }
-sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
-frame-support = { version = "2.0.0", default-features = false, path = "../support" }
-frame-system = { version = "2.0.0", default-features = false, path = "../system" }
+bls12_381 = "0.3.1"
+pairing = "0.18"
 
+sha3 = { version = "0.8", default-features = false, optional = true }
+rand = { version = "0.7.3", default-features = false, optional = true }
+codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
+sp-std = { version = "2.0.0", default-features = false, path = "../std" }
+sp-core = { version = "2.0.0", default-features = false, path = "../core" }
+sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
 
 [dev-dependencies]
 
-
 [features]
-default = ["std"]
+default = [ "std" ]
 std = [
+	"rand/std",
+	"sha3/std",
 	"codec/std",
-	"sp-dkg/std",
-	"sp-std/std",
 	"sp-core/std",
 	"sp-runtime/std",
-	"frame-support/std",
-	"frame-system/std",
+	"sp-std/std",
+]
+
+full_crypto = [
+	"sha3",
 ]
