--- a/frame/dkg/Cargo.toml
+++ b/frame/dkg/Cargo.toml
@@ -14,6 +14,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
+sp-io = { version = "2.0.0", default-features = false, path = "../../primitives/io" }
 sp-dkg = { version = "0.1.0", default-features = false, path = "../../primitives/dkg" }
 sp-std = { version = "2.0.0", default-features = false, path = "../../primitives/std" }
 sp-core = { version = "2.0.0", default-features = false, path = "../../primitives/core" }
@@ -29,6 +30,7 @@ frame-system = { version = "2.0.0", default-features = false, path = "../system"
 default = ["std"]
 std = [
 	"codec/std",
+	"sp-io/std",
 	"sp-dkg/std",
 	"sp-std/std",
 	"sp-core/std",
