--- a/frame/randomness-beacon/Cargo.toml
+++ b/frame/randomness-beacon/Cargo.toml
@@ -18,6 +18,7 @@ sp-inherents = { version = "2.0.0", default-features = false, path = "../../prim
 sp-randomness-beacon= { version = "0.1.0", default-features = false, path = "../../primitives/randomness-beacon" }
 sp-authorship = { version = "2.0.0", default-features = false, path = "../../primitives/authorship" }
 sp-std = { version = "2.0.0", default-features = false, path = "../../primitives/std" }
+sp-core = { version = "2.0.0", default-features = false, path = "../../primitives/core" }
 sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
 frame-support = { version = "2.0.0", default-features = false, path = "../support" }
 frame-system = { version = "2.0.0", default-features = false, path = "../system" }
@@ -31,9 +32,10 @@ sp-io ={ version = "2.0.0", path = "../../primitives/io" }
 default = ["std"]
 std = [
 	"codec/std",
-	"sp-inherents/std",
-	"sp-runtime/std",
 	"sp-std/std",
+	"sp-core/std",
+	"sp-runtime/std",
+	"sp-inherents/std",
 	"frame-support/std",
 	"frame-system/std",
 	"sp-authorship/std",
