creates randomness-beacon crate
rb-node for testing

randomness beacon skeleton

a skeleton for inherent data provider

Added the KeyBox trait along a mock implementation and a trivial test.

random bytes buffer

changes inherent type and random bytes type

support for multiple topics

Skeleton of the pallet that compiles.

Added a dispatch to the pallet.

moves inherents from client to primitives

wait for random bytes

add randomness pallet to rb-node

update to stable version 2.0.0

fixes inherent creation in runtime

Fixed reading random_bytes in the pallet. Now the pallet works correctly with dummy random_bytes.

movex keybox to primitives

Merge branch 'randomness-beacon-m1' of github.com:Cardinal-Cryptography/substrate into randomness-beacon-m1

modifies proposer to wait for a notification that a new randomness is ready

discard block proposition if inherent data does not contain random bytes

remove signing messages in gossip

adds less mocky implementation of keybox

adds keybox to pallet

Getting rid of inherent provider. Moving the await logic into proposer.

Adjusting service and pallet code to the version with no inherent provider.

fixes generating randomness mock

changes random_bytes type from Vec<u8> to Randomness

adds grandpa finality

Remove inherent data provider code.

There is now a single global constant for the block height to start including randomness.

Fixed compiling the pallet.

Cleaned up the pallet and added tests.

Changed name to sc_randomness_beacon. Added tests to authorship.

Dockerfile for running a node

fixes metadata in manifest files

refactor and new test in import

Cleaned up and renamed NetworkBridge.

Rounds in validator removed.

Test for RandomnessGossip.

adds readme

idea for dkg implementation

dummy hash-to-curve function

Template for the dkg pallet.

encode/decode for signature

adds VerifyKey and Pair

ads combine share

keybox adjustments for client and pallet

fixes malicious sp_io package

first successful co

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ members = [
 	"bin/node/rpc",
 	"bin/node/runtime",
 	"bin/node/testing",
+	"bin/rb-node/node",
+	"bin/rb-node/runtime",
 	"bin/utils/subkey",
 	"bin/utils/chain-spec-builder",
 	"client/api",
@@ -48,6 +50,7 @@ members = [
 	"client/offchain",
 	"client/peerset",
 	"client/proposer-metrics",
+    "client/randomness-beacon",
 	"client/rpc-servers",
 	"client/rpc",
 	"client/rpc-api",
@@ -73,6 +76,7 @@ members = [
 	"frame/contracts/rpc",
 	"frame/contracts/rpc/runtime-api",
 	"frame/democracy",
+	"frame/dkg",
 	"frame/elections-phragmen",
 	"frame/elections",
 	"frame/evm",
@@ -91,6 +95,7 @@ members = [
 	"frame/node-authorization",
 	"frame/offences",
 	"frame/proxy",
+    "frame/randomness-beacon",
 	"frame/randomness-collective-flip",
 	"frame/recovery",
 	"frame/scheduler",
@@ -144,6 +149,7 @@ members = [
 	"primitives/npos-elections",
 	"primitives/npos-elections/fuzzer",
 	"primitives/npos-elections/compact",
+    "primitives/randomness-beacon",
 	"primitives/rpc",
 	"primitives/runtime-interface",
 	"primitives/runtime-interface/proc-macro",
