--- a/primitives/dkg/Cargo.toml
+++ b/primitives/dkg/Cargo.toml
@@ -22,6 +22,7 @@ codec = { package = "parity-scale-codec", version = "1.3.1", default-features = 
 sp-std = { version = "2.0.0", default-features = false, path = "../std" }
 sp-core = { version = "2.0.0", default-features = false, path = "../core" }
 sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
+sp-randomness-beacon = { version = "0.1.0", default-features = false, path = "../../primitives/randomness-beacon" }
 
 [dev-dependencies]
 
@@ -34,6 +35,7 @@ std = [
 	"sp-core/std",
 	"sp-runtime/std",
 	"sp-std/std",
+	"sp-randomness-beacon/std",
 ]
 
 full_crypto = [
