--- a/bin/rb-node/runtime/Cargo.toml
+++ b/bin/rb-node/runtime/Cargo.toml
@@ -31,14 +31,15 @@ sp-consensus-aura = { version = "0.8.0", default-features = false, path = "../..
 sp-core = { version = "2.0.0", default-features = false, path = "../../../primitives/core" }
 sp-inherents = { path = "../../../primitives/inherents", default-features = false, version = "2.0.0"}
 sp-offchain = { version = "2.0.0", default-features = false, path = "../../../primitives/offchain" }
-sp-randomness-beacon = { version = "0.1.0", default-features = false, path = "../../../primitives/randomness-beacon" }
 sp-runtime = { version = "2.0.0", default-features = false, path = "../../../primitives/runtime" }
 sp-session = { version = "2.0.0", default-features = false, path = "../../../primitives/session" }
 sp-std = { version = "2.0.0", default-features = false, path = "../../../primitives/std" }
 sp-transaction-pool = { version = "2.0.0", default-features = false, path = "../../../primitives/transaction-pool" }
 sp-version = { version = "2.0.0", default-features = false, path = "../../../primitives/version" }
 
+sp-dkg = { version = "0.1.0", default-features = false, path = "../../../primitives/dkg" }
 pallet-dkg = { version = "0.1.0", default-features = false, path = "../../../frame/dkg" }
+sp-randomness-beacon = { version = "0.1.0", default-features = false, path = "../../../primitives/randomness-beacon" }
 pallet-randomness-beacon = { version = "0.1.0", default-features = false, path = "../../../frame/randomness-beacon" }
 
 # Used for the node's RPCs
@@ -65,6 +66,7 @@ std = [
 	"pallet-transaction-payment/std",
   "pallet-transaction-payment-rpc-runtime-api/std",
 	"serde",
+	"sp-dkg/std",
 	"sp-api/std",
 	"sp-block-builder/std",
 	"sp-consensus-aura/std",
