--- a/primitives/dkg/Cargo.toml
+++ b/primitives/dkg/Cargo.toml
@@ -19,6 +19,7 @@ pairing = "0.18"
 sha3 = { version = "0.8", default-features = false, optional = true }
 rand = { version = "0.7.3", default-features = false, optional = true }
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
+sp-api = { version = "2.0.0", default-features = false, path = "../api" }
 sp-std = { version = "2.0.0", default-features = false, path = "../std" }
 sp-core = { version = "2.0.0", default-features = false, path = "../core" }
 sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
@@ -32,6 +33,7 @@ std = [
 	"rand/std",
 	"sha3/std",
 	"codec/std",
+	"sp-api/std",
 	"sp-core/std",
 	"sp-runtime/std",
 	"sp-std/std",
