--- a/frame/randomness-beacon/Cargo.toml
+++ b/frame/randomness-beacon/Cargo.toml
@@ -13,6 +13,7 @@ repository = "https://github.com/Cardinal-Cryptography/substrate/"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
+serde = { version = "1.0.101", optional = true , features = ["derive"]}
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 sp-inherents = { version = "2.0.0", default-features = false, path = "../../primitives/inherents" }
 sp-randomness-beacon= { version = "0.1.0", default-features = false, path = "../../primitives/randomness-beacon" }
@@ -32,6 +33,7 @@ sp-io ={ version = "2.0.0", path = "../../primitives/io" }
 default = ["std"]
 std = [
 	"codec/std",
+	"serde/std",
 	"sp-std/std",
 	"sp-core/std",
 	"sp-runtime/std",
