--- a/primitives/randomness-beacon/Cargo.toml
+++ b/primitives/randomness-beacon/Cargo.toml
@@ -17,7 +17,7 @@ log = "0.4.8"
 parking_lot = "0.10.0"
 bls12_381 = "0.3.1"
 pairing = "0.18"
-sha3 = { version = "0.8", default-features = false, optional = true }
+sha3 = { version = "0.8", default-features = false }
 rand = { version = "0.7.3", default-features = false, optional = true }
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 sp-api = { version = "2.0.0", default-features = false, path = "../api" }
@@ -40,8 +40,4 @@ std = [
 	"sp-runtime/std",
 	"sp-api/std",
 	"sp-std/std",
-]
-
-full_crypto = [
-	"sha3",
 ]
