--- a/frame/randomness-beacon/Cargo.toml
+++ b/frame/randomness-beacon/Cargo.toml
@@ -22,6 +22,8 @@ frame-system = { version = "2.0.0", default-features = false, path = "../system"
 
 [dev-dependencies]
 sp-io ={ version = "2.0.0", path = "../../primitives/io" }
+sp-core= { version = "2.0.0", path = "../../primitives/core" }
+sp-runtime = { version = "2.0.0", path = "../../primitives/runtime" }
 
 
 [features]
