--- a/primitives/dkg/Cargo.toml
+++ b/primitives/dkg/Cargo.toml
@@ -16,14 +16,13 @@ targets = ["x86_64-unknown-linux-gnu"]
 bls12_381 = "0.3.1"
 pairing = "0.18"
 
-sha3 = { version = "0.8", default-features = false, optional = true }
+sha3 = { version = "0.8", default-features = false}
 rand = { version = "0.7.3", default-features = false, optional = true }
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 sp-api = { version = "2.0.0", default-features = false, path = "../api" }
 sp-std = { version = "2.0.0", default-features = false, path = "../std" }
 sp-core = { version = "2.0.0", default-features = false, path = "../core" }
 sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
-sp-randomness-beacon = { version = "0.1.0", default-features = false, path = "../../primitives/randomness-beacon" }
 
 [dev-dependencies]
 
@@ -37,9 +36,4 @@ std = [
 	"sp-core/std",
 	"sp-runtime/std",
 	"sp-std/std",
-	"sp-randomness-beacon/std",
-]
-
-full_crypto = [
-	"sha3",
 ]
