--- a/primitives/randomness-beacon/Cargo.toml
+++ b/primitives/randomness-beacon/Cargo.toml
@@ -22,6 +22,7 @@ rand = { version = "0.7.3", default-features = false, optional = true }
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 sp-api = { version = "2.0.0", default-features = false, path = "../api" }
 sp-std = { version = "2.0.0", default-features = false, path = "../std" }
+sp-dkg= { version = "0.1.0", default-features = false, path = "../dkg" }
 sp-core = { version = "2.0.0", default-features = false, path = "../core" }
 sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
 sp-inherents = { version = "2.0.0", default-features = false, path = "../inherents" }
@@ -40,4 +41,5 @@ std = [
 	"sp-runtime/std",
 	"sp-api/std",
 	"sp-std/std",
+	"sp-dkg/std",
 ]
