--- a/bin/rb-node/runtime/Cargo.toml
+++ b/bin/rb-node/runtime/Cargo.toml
@@ -46,6 +46,11 @@ pallet-randomness-beacon = { version = "0.1.0", default-features = false, path =
 frame-system-rpc-runtime-api = { version = "2.0.0", default-features = false, path = "../../../frame/system/rpc/runtime-api/" }
 pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0", default-features = false, path = "../../../frame/transaction-payment/rpc/runtime-api/" }
 
+# Used for runtime benchmarking
+frame-benchmarking = { version = "2.0.0", default-features = false, path = "../../../frame/benchmarking", optional = true }
+frame-system-benchmarking = { version = "2.0.0", default-features = false, path = "../../../frame/system/benchmarking", optional = true }
+hex-literal = { version = "0.3.1", optional = true }
+
 [build-dependencies]
 wasm-builder-runner = { version = "2.0.0", package = "substrate-wasm-builder-runner", path = "../../../utils/wasm-builder-runner" }
 
@@ -80,4 +85,15 @@ std = [
 	"sp-version/std",
 	"frame-system/std",
   "frame-system-rpc-runtime-api/std",
+]
+runtime-benchmarks = [
+	"sp-runtime/runtime-benchmarks",
+	"frame-benchmarking",
+	"frame-support/runtime-benchmarks",
+	"frame-system-benchmarking",
+	"hex-literal",
+	"frame-system/runtime-benchmarks",
+	"pallet-balances/runtime-benchmarks",
+	"pallet-timestamp/runtime-benchmarks",
+	"pallet-randomness-beacon/runtime-benchmarks",
 ]
