--- a/frame/randomness-beacon/Cargo.toml
+++ b/frame/randomness-beacon/Cargo.toml
@@ -21,6 +21,8 @@ sp-runtime = { version = "2.0.0", default-features = false, path = "../../primit
 frame-support = { version = "2.0.0", default-features = false, path = "../support" }
 frame-system = { version = "2.0.0", default-features = false, path = "../system" }
 
+frame-benchmarking = { version = "2.0.0", default-features = false, path = "../benchmarking", optional = true }
+
 [dev-dependencies]
 sp-io ={ version = "2.0.0", path = "../../primitives/io" }
 sp-core= { version = "2.0.0", path = "../../primitives/core" }
@@ -35,6 +37,8 @@ std = [
 	"sp-std/std",
 	"sp-inherents/std",
 	"frame-support/std",
+	"frame-benchmarking/std",
 	"frame-system/std",
 	"sp-randomness-beacon/std",
 ]
+runtime-benchmarks = ["frame-benchmarking"]
