add dkg benchmark to runtime

--- a/bin/rb-node/runtime/Cargo.toml
+++ b/bin/rb-node/runtime/Cargo.toml
@@ -96,4 +96,5 @@ runtime-benchmarks = [
 	"pallet-balances/runtime-benchmarks",
 	"pallet-timestamp/runtime-benchmarks",
 	"pallet-randomness-beacon/runtime-benchmarks",
+	"pallet-dkg/runtime-benchmarks",
 ]
